# skema

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
conda/: environment.yaml
skema/: __init__.py  cli.py  lib.py
skema/static/: __init__.py
skema/static/bathy_substrate/: README.txt  __init__.py
