[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skema"
version = "0.1.0"
description = "Satellite-based kelp classification from Sentinel-2 using semantic segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Mohsen Ghanbari", email = "mohsenghanbari@uvic.ca"}
]

dependencies = [
  "albumentations>=1.3,<2",
  "click>=8.1,<9",
  "matplotlib==3.7.5",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "pytorch-lightning>=2.1,<3",
  "rasterio>=1.3,<2",
  "scikit-learn==1.3.2",
  "segmentation-models-pytorch==0.5.0",
  "tifffile==2023.4.12",
  "torch>=2.1,<3",
  "torchvision>=0.16,<1",
  "torchmetrics==1.7.1",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
gdal = ["gdal>=3.6,<3.8"]

[project.scripts]
skema = "skema.cli:main"
