[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skema-kelp"
version = "0.1.1"
description = "Satellite-based kelp classification from Sentinel-2 using semantic segmentation"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "MIT"}
authors = [
  {name = "Mohsen Ghanbari", email = "mohsenghanbari@uvic.ca"}
]
keywords = ["kelp", "sentinel-2", "semantic-segmentation", "remote-sensing", "satellite-imagery", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "albumentations>=1.3,<2",
  "click>=8.1,<9",
  "numpy>=1.26,<2",
  "pytorch-lightning>=2.1,<3",
  "rasterio>=1.3,<2",
  "scikit-learn>=1.3,<2",
  "segmentation-models-pytorch==0.5.0",
  "torch>=2.1,<3",
  "torchvision>=0.16,<1",
  "torchmetrics>=1.7,<2",
  "rich>=13.0,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/m5ghanba/skema"
Repository = "https://github.com/m5ghanba/skema"
Issues = "https://github.com/m5ghanba/skema/issues"
Documentation = "https://github.com/m5ghanba/skema#readme"
"Hugging Face" = "https://huggingface.co/m5ghanba/SKeMa"
DOI = "https://doi.org/10.57967/hf/6790"

[project.scripts]
skema = "skema.cli:main"

[tool.setuptools]
packages = ["skema", "skema.static", "skema.static.bathy_substrate"]